# edn.c

./: .clang-format  .clangd  .clangd.template  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.bat  build.ps1  deps.edn  generate_clangd.sh  profile.sh
.github/workflows/: ci.yml  pages.yml
bench/: bench_characters.c  bench_comments.c  bench_continuous.c  bench_equality.c  bench_framework.h  bench_identifiers.c  bench_integration.c  bench_integration.clj  bench_number_profile.c  bench_numbers.c  bench_profile_session.c  bench_simple.c  bench_strings.c  bench_time.h  bench_wasm.js
bindings/wasm/: wasm_edn.c
docs/: 404.html  CNAME  DESIGN.md  READER_DESIGN.md  WINDOWS.md  index.html  showcase.edn  showcase_simple.edn
docs/grammar/: clojure.edn-spec-extensions.org  clojure.edn_grammar.ebnf  clojure.edn_spec.org  edn_grammar.ebnf  edn_spec.org
examples/: edn_cli.c  edn_tui.c  example_extended_characters.c  example_metadata.c  example_namespaced_map.c  example_text_block.c  reader.c  wasm_example.js
include/: edn.h
src/: arena.c  character.c  collection.c  discard.c  edn.c  edn_internal.h  equality.c  identifier.c  identifier_internal.h  metadata.c  newline_finder.c  number.c  reader.c  simd.c  string.c  symbolic.c  tagged.c  text_block.c  uniqueness.c  writer.c
test/: test_basic.c  test_bool_nil.c  test_bounds.c  test_characters.c  test_collections.c  test_convenience.c  test_delimiters.c  test_depth.c  test_discard.c  test_discard_readers.c  test_duplicate_check.c  test_equality.c  test_error_positions.c  test_errors.c  test_escaped_quotes.c  test_external.c  test_fast_double.c  test_framework.h  test_identifiers.c  test_list.c  test_map.c  test_metadata.c  test_namespaced_map.c  test_newline_finder.c  test_numbers.c  test_parser.c  test_reader_memory_safety.c  test_reader_parsing.c  test_reader_registry.c  test_set.c  test_simd_string_edges.c  test_singleton_values.c  test_strings.c  test_swar.c  test_symbolic.c  test_tagged.c  test_text_block.c  test_underscore_numeric.c  test_uniqueness.c  test_vector.c  (+3 more)
